test/Fail/Issue2075.agda
data Unit : Set where
  unit : Unit

F : Unit → Set₁
F {x = unit} = Set
