test/Fail/Issue2075.err
Issue2075.agda:5.8-12: error: [WrongHidingInLHS]
Unexpected implicit argument
when checking the clause left hand side
F {x = unit}
